--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@
 
 plugins {
     id 'java'
-    id 'maven-publish'
+    id 'war'
 }
 
 repositories {
@@ -42,11 +42,3 @@ group = 'com.mujicion'
 version = '1.0.0'
 description = 'eGovWebRun'
 sourceCompatibility = '1.8'
-
-publishing {
-    publications {
-        maven(MavenPublication) {
-            from(components.java)
-        }
-    }
-}
